--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="/src/carousel.js"></script>
+    <script type="module" src="/src/carousel.js"></script>
+    <script type="module" src="/src/api.js"></script>
   </body>
 </html>
