added slider css style  and javascript functionality to the project

--- a/favorites.html
+++ b/favorites.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="container">
+    <div id="container">
       <section class="watched">
         <div id="favorites">
           <img src="" alt="image-jpg" />
