added new api fetch for likes section

--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
     <title>Vite App</title>
 </head>
 
-
-
 <body>
     <div id="app">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script type="module" src="./javascript/main.js"></script>
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/carousel.js"></script>
+    <script type="module" src="/src/api.js"></script>
 </body>
 
 </html>
