--- a/details.html
+++ b/details.html
@@ -1,14 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <script type="module" src="/src/carousel.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+</head>
+
+<body>
+  <div id="details-page">
+    <!-- header section -->
+    <header>
+      <div class="container header">
+        <div class="logo">
+          <img class="main-logo" src=" /assets/img/Logo.png" alt="logo" />
+          <img class="logo-name" src=" /assets/img/SaintStream.png" alt="logo" />
+        </div>
+        <nav class="navbar">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="movie-infos-page">Movies</a></li>
+            <li><a href="index.html">tv Shows</a></li>
+          </ul>
+          <a href="index.html"><button style="background-color: transparent; color: #fff;">Back to home</button></a>
+        </nav>
+        <div class="searchbar">
+          <form class="search-form">
+            <input type="search" placeholder="Search by title..." />
+            <button type="button" class="search-icon">
+              <img src="/assets/img/search.svg" alt="">
+            </button>
+          </form>
+        </div>
+      </div>
+    </header>
+    <!-- hero section -->
+    <section class="hero-banner hero-swiper">
+      <div class="swiper-slide slide  slide-banner overlay">
+        <div class="container swiper-container">
+          <div class="movie-info">
+            <span class="movie-tag">
+              season 6
+            </span>
+            <h3 class="movie-title">
+              Star Wars: Mandalorian
+            </h3>
+            <span class="movie-meta">
+              2hr40m - 2022 - Fantasy - Action
+            </span>
+            <p class="movie-discription">
+              The Mandalorian protagonist, Din Djarin,but usually called “The Mandalorian” or shortened
+              “Mando”, is a lone fighter who earns his money as a bounty hunter five years after the sheer
+              fall of the Empire.
+            </p>
+            <div class="cta">
+              <button class="primary-cta">
+                Download
+              </button>
+              <button class="outline-cta">
+                Add watchlist
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about the movie -->
+    <section id="movie-infos-page">
+      <div class="container">
+        <div class="single-movie-info">
+          <h3 class="info-title">Story Line</h3>
+          <p class="movie-info-description">
+            When a villain kidnaps Santa Claus from the North Pole, an E.L.F. (Extremely Large and Formidable) operative
+            joins
+            forces with the world's most accomplished tracker to find him and save Christmas.
+          </p>
+        </div>
+        <div class="cast">
+          <h3 class="cast-heading info-title">Top Cast</h3>
+          <div class="cast-card">
+            <img class="cast-profile-image" src="assets/cast.png" alt="" />
+            <div class="cast-info">
+              <h5 class="cast-role">Pedro Pascal</h5>
+              <p class="cast-name">Joel Miller</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- footer section -->
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="footer-item-one">
+            <div class="footer-heading">
+              <h3 class="heading-three-footer">Our platform is trusted by millions & features best updated movies all
+                around
+                the world.
+              </h3>
+            </div>
+          </div>
+          <div class="footer-item-two">
+            <ul class="unordered-list">
+              <div class="links"><a href="">Home</a>/</div>
+              <div class="links"><a href="">Release</a>/</div>
+              <div class="links"><a href="">Discover</a>/</div>
+            </ul>
+            <div class="social-media">
+              <img class="social-media-icon" src="/assets/img/Facebook.png" alt="facebook-icon" />
+              <img class="social-media-icon" src="/assets/img/Instagram.png" alt="instagram-icon" />
+              <img class="social-media-icon" src="/assets/img/Twitter.png" alt="twitter-icon" />
+              <img class="social-media-icon" src="/assets/img/Google.png" alt="google-icon" />
+            </div>
+          </div>
+        </div>
+        <div class="contact-footer">
+          <div class="contact-policy">
+            <span>Privacy Policy</span>
+            <span>Terms of service</span>
+            <span>Language</span>
+          </div>
+          <div class="copyright">
+            &copy; 2024
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/carousel.js"></script>
+  <script type="module" src="./src/api.js"></script>
+</body>
+
 </html>
