commiting new changes to the project the details page

--- a/details.html
+++ b/details.html
@@ -36,7 +36,7 @@
       </div>
     </header>
     <!-- hero section -->
-    <section class="hero-banner hero-swiper">
+    <section class="hero-banner hero-swiper" id="hero-section">
       <div class="swiper-slide slide  slide-banner overlay">
         <div class="container swiper-container">
           <div class="movie-info">
