commiting new changes to the project the details page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <div id="app">
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/carousel.js"></script>
     <script type="module" src="/src/api.js"></script>
+    <script type="module" src="./src/counter.js"></script>
 </body>
 
 </html>
