adding a movie search feature to the project

--- a/details.html
+++ b/details.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
   <title>Vite App</title>
 </head>
 
@@ -36,10 +37,11 @@
       </div>
     </header>
     <!-- hero section -->
-    <section class="hero-banner hero-swiper" id="hero-section">
-      <div class="swiper-slide slide  slide-banner overlay">
+    <section class="hero-banner hero-swiper" id="hero-section-one">
+      <div class="slide-banner overlay">
         <div class="container swiper-container">
-          <div class="movie-info">
+
+          <div class="movie-details-2">
             <span class="movie-tag">
               season 6
             </span>
@@ -54,13 +56,37 @@
               “Mando”, is a lone fighter who earns his money as a bounty hunter five years after the sheer
               fall of the Empire.
             </p>
-            <div class="cta">
-              <button class="primary-cta">
-                Download
-              </button>
-              <button class="outline-cta">
-                Add watchlist
-              </button>
+            <div class="movie-info">
+              <div class="cta">
+                <button class="primary-cta">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+                    fill="rgba(255,255,255,1)">
+                    <path
+                      d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM10.6219 8.41459C10.5562 8.37078 10.479 8.34741 10.4 8.34741C10.1791 8.34741 10 8.52649 10 8.74741V15.2526C10 15.3316 10.0234 15.4088 10.0672 15.4745C10.1897 15.6583 10.4381 15.708 10.6219 15.5854L15.5008 12.3328C15.5447 12.3035 15.5824 12.2658 15.6117 12.2219C15.7343 12.0381 15.6846 11.7897 15.5008 11.6672L10.6219 8.41459Z">
+                    </path>
+                  </svg>
+                  <span>Continue watching</span>
+                </button>
+                <button class="outline-cta">
+                  <i class="ri-bookmark-line"></i>
+                  <span>Add watchlist</span>
+                </button>
+              </div>
+
+              <div class="details-btn">
+                <button class="outline-cta">
+                  <i class="ri-download-line"></i>
+                  <span>Download</span>
+                </button>
+                <button class="outline-cta">
+                  <i class="ri-share-fill"></i>
+                  <span>share</span>
+                </button>
+                <button class="outline-cta">
+                  <i class="ri-thumb-up-line"></i>
+                  <span>Like</span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
