adding a movie search feature to the project

--- a/details.html
+++ b/details.html
@@ -41,7 +41,7 @@
       <div class="slide-banner overlay">
         <div class="container swiper-container">
 
-          <div class="movie-details-2">
+          <div class="movie-details">
             <span class="movie-tag">
               season 6
             </span>
@@ -68,22 +68,19 @@
                   <span>Continue watching</span>
                 </button>
                 <button class="outline-cta">
-                  <i class="ri-bookmark-line"></i>
                   <span>Add watchlist</span>
                 </button>
               </div>
 
               <div class="details-btn">
                 <button class="outline-cta">
-                  <i class="ri-download-line"></i>
                   <span>Download</span>
+                  <i class="ri-download-line"></i>
                 </button>
                 <button class="outline-cta">
-                  <i class="ri-share-fill"></i>
                   <span>share</span>
                 </button>
                 <button class="outline-cta">
-                  <i class="ri-thumb-up-line"></i>
                   <span>Like</span>
                 </button>
               </div>
