--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <title>movie db</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="styles/utils.css" />
     <title>Vite App</title>
 </head>
 
@@ -28,7 +33,8 @@
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/carousel.js"></script>
     <script type="module" src="/src/api.js"></script>
-    <script type="module" src="./src/counter.js"></script>
+    <!-- <script type="module" src="./src/counter.js"></script> -->
+    <script type="module" src="./src/swiper.js"></script>
 </body>
 
 </html>
