--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/carousel.js"></script>
     <script type="module" src="/src/api.js"></script>
-    <!-- <script type="module" src="./src/counter.js"></script> -->
+    <script type="module" src="./src/counter.js"></script>
     <script type="module" src="./src/swiper.js"></script>
+    <script type="module" src="./src/details.js"></script>
 </body>
 
 </html>
