added functionality to the search input and

--- a/movie-details.html
+++ b/movie-details.html
@@ -20,11 +20,12 @@
         </div>
         <nav class="navbar">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="movie-infos-page">Movies</a></li>
-            <li><a href="index.html">tv Shows</a></li>
+            <li><a href="movie-details.html">Home</a></li>
+            <li><a href="#simalar-movies">Movies</a></li>
+            <li><a href="#footer">tv Shows</a></li>
           </ul>
-          <a href="index.html"><button style="background-color: transparent; color: #fff;">Back to home</button></a>
+          <button id="backToHome" style="background-color: transparent; color: #fff;">Back to
+            home</button>
         </nav>
         <div class="search-bar">
           <form class="search-form">
@@ -59,7 +60,7 @@
       </div>
     </section>
     <!-- Similar Movies Section -->
-    <section id="mySwiper swiper">
+    <section id="similar-movies" class="mySwiper swiper">
       <div class="container swiper-wrapper">
         <h2>Similar Movies</h2>
         <div id="similar-movies swiper-slide"></div>
@@ -69,7 +70,7 @@
     </section>
 
     <!-- footer section -->
-    <footer>
+    <footer id="footer">
       <div class="container">
         <div class="footer">
           <div class="footer-item-one">
